[package]
name = "rust-opentelemetry-jaeger-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.8"
isahc = "1.7.2"
opentelemetry = { version = "0.18.0", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.17.0", features = ["rt-tokio-current-thread"] }
reqwest = { version = "0.11.11", features = ["tokio-rustls"] }
surf = "2.3.2"
tokio = { version = "1.21.1", features = ["macros", "rt"] }
tracing = "0.1.36"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "json"] }
